SimpleComplex/Utils 1.x, 2019-02-02
-----------------------------------
- Time::diffConstant() must fix that native diff()|\DateInterval calculation
  doesn't work correctly with other timezone than UTC
  (https://bugs.php.net/bug.php?id=52480).
- Release 1.12.

SimpleComplex/Utils 1.x, 2019-01-21
-----------------------------------
- Custom exception class accommodating user message.
- Release 1.11.
- StdObject class which supports setting properties during initialization
  and is stringable.

SimpleComplex/Utils 1.x, 2019-01-18
-----------------------------------
- CLI echoMessage() status argument must support all syslog severity levels.
- Release 1.10.1.

SimpleComplex/Utils 1.x, 2019-01-04
-----------------------------------
- Deprecate Time methods getDateISOlocal, getTimeISOlocal, getDateTimeISOlocal
  because they don't deliver as the their names promise.
  Replacement methods which either don't promise local timezone or actually
  ensure local timezone.
- TimeLocal and TimeLocalFreezable secures that a new object uses a timezone
  compatible with local timezone.
- Static Time::getTimezoneLocalInternal().
- phpunit's assert... methods are static, not instance methods.
- Release 1.10.

SimpleComplex/Utils 1.x, 2018-12-17
-----------------------------------
- Renamed cli.php; from cli.phpsh.
- Release 1.9.7.

SimpleComplex/Utils 1.x, 2018-10-04
-----------------------------------
- Exception/error-handlers shan't look like PHP fatal error
  white-screen-of-death.
- Release 1.9.6.

SimpleComplex/Utils 2.x, 2018-10-04
-----------------------------------
- Release 1.9.5.

SimpleComplex/Utils 1.x, 2018-10-03
-----------------------------------
- Utils::parseIniString() fix that native parse_ini_string() ignores
  INI_SCANNER_RAW argument when it comes to array key names.

SimpleComplex/Utils 1.x, 2018-10-01
-----------------------------------
- CliCommand toString shan't err on exceptionally long option name.
- Unicode::toLowerCase (Doh).
- Release 1.9.4.
