@@ -4,6 +4,18 @@ SimpleComplex/Utils 1.x, 2019-02-02
   doesn't work correctly with other timezone than UTC
   (https://bugs.php.net/bug.php?id=52480).
 - Release 1.12.
+- Time::diffConstant() now throws exception if the two datetimes
+  don't have the same timezone.
+- Serious Time bug: using offset to compare timezone is an absolute no-go
+  due to daylight saving time.
+  All timezone comparisions now use timezone name, and the comparisons are only
+  forgiving in the sense that UTC and Z are considered the same.
+  Removed Time instance var timezoneOffsetIsLocal
+  and class var $timezoneLocalOffset.
+  Removed Time::getTimezoneLocalInternal() $offset parameter.
+  Time::getTimezoneLocalInternal() now returns clone, not the actual object.
+  Time::checkTimezoneDefault() now checks name, not offset.
+
 
 SimpleComplex/Utils 1.x, 2019-01-21
 -----------------------------------
